# Games101_Homework

./: .gitignore  README.md
Assignment1/code/: CMakeLists.txt  Triangle.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
Assignment1/代码框架/: CMakeLists.txt  Triangle.cpp  main.cpp  rasterizer.cpp
Assignment2/code/: CMakeLists.txt  main.cpp  rasterizer.cpp  rasterizer.hpp
Assignment2/代码框架/: CMakeLists.txt  Triangle.cpp  main.cpp  rasterizer.cpp  rasterizer.hpp
Assignment3/Code/: CMakeLists.txt  Texture.hpp  Triangle.cpp  main.cpp  rasterizer.cpp  rasterizer.hpp
Assignment4/code/: CMakeLists.txt  main.cpp
Assignment5/Code/: CMakeLists.txt  Object.hpp  Renderer.cpp  Renderer.hpp  Scene.hpp  Sphere.hpp  Triangle.hpp  Vector.hpp  global.hpp  main.cpp
Assignment6/code/: BVH.cpp  BVH.hpp  Bounds3.hpp  Intersection.hpp  Ray.hpp  Renderer.cpp  Scene.cpp  Scene.hpp  Triangle.hpp  main.cpp
Assignment7.5/: README.md
Assignment7.5/code/: BVH.cpp  Bounds3.hpp  Material.hpp  Ray.hpp  Scene.cpp  Sphere.hpp  global.hpp
Assignment7/code/: BVH.cpp  Bounds3.hpp  Material.hpp  Ray.hpp  Renderer.cpp  Scene.cpp  Triangle.hpp  main.cpp
Assignment7_5/: Material.hpp  Renderer.cpp  Scene.cpp  Sphere.hpp  Triangle.hpp  global.hpp  main.cpp
Assignment8/code/: CMakeLists.txt
Assignment8/code/CGL/: CMakeLists.txt
Assignment8/code/CGL/src/: osdtext.cpp  viewer.cpp
Assignment8/code/src/: CMakeLists.txt  rope.cpp
Games101_environment/Eigen3/share/eigen3/cmake/: Eigen3Targets.cmake
Games101_environment/freetype/lib/cmake/freetype/: freetype-config-noconfig.cmake  freetype-config.cmake
Games101_environment/freetype/lib/pkgconfig/: freetype2.pc
pa0/pa0/: CMakeLists.txt  main.cpp
